# ML-Service

./: ReadMe.md  pyproject.toml
ml-service/app/api/: main.py
ml-service/app/models/: regressor.py
ml-service/app/schemas/: data.py  model.py
ml-service/app/utils/: data_generator.py
ml_service/app/: main.py
ml_service/app/utils/: schema_encoder_decoder.py
ml_service/ml_models/: regressor.py
ml_service/schemas/: dataset.py  regressor.py
tests/: test_main.py  test_ml_models.py  test_random_forest_regressor.py
