[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["tamadevu <tori.amadevu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pylint = "^3.2.6"
ruff = "^0.5.5"
pyright = "^1.1.373"
black = "^24.4.2"
faker = "^26.0.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
